    - when executing Python script from GUI, run in background thread, wait for
      RUNTIME state
    - enter RUNTIME state when start button pressed with empty canvas
    - added support for asymmetric link effects
    - support link delays up to 274 seconds (netem maximum)
    - allow runtime changes of WLAN link effects
  * DAEMON:
    - set NODE_NAME and NODE_NUMBER in default vnoded environment
    - allow parsing XML files into live running session
    - enable link effects between hub/switch and hub/switch connections
    - update MDR service to use broadcast interfaces for non-WLAN links
    - allow node class to be specified when initializing XML parser
    - save and parse canvas origin (reference point) and scale in MP XML
    - up/down control script session option
    - fix hash calculation used to determine GRE tunnel keys
    - use shell script to detach SMF on startup
    - added NRL services for mgen sink and nrlolsrv2
    - use SDT URL session option
    - added core-manage tool for addons to add/remove/check services, models,
      and custom node types
  * API:
    - implement local flag in Execute Message for running host commands
    - jitter changed to 64-bit value to align with delay in Link Message
    - added unidirectional link flag TLV to Link Message
    - added reconfigure event type for re-generating service config files
    - return errors in API with failed services
  * BUGFIXES:
    - fix HTTP service running under Ubuntu
    - fixed the following bugs: #150, 169, 188, 220, 225, 230, 231, 242, 244,
      247, 248, 250, 251

2013-09-25 CORE 4.6

  * NOTE: cored is now core-daemon, and core is now core-gui (for Debian
    acceptance)
  * NOTE: /etc/init.d/core is now /etc/init.d/core-daemon (for insserv
    compatibility)
  * EMANE:
    - don't start EMANE locally if no local NEMs
    - EMANE poststartup() to re-transmit location events during initialization
    - added debug port to EMANE options